# tgdyk

./: AGENTS.md  Cargo.toml  DOCUMENTATION.md  LICENSE  MAINTAINERS.md  README.md  deny.toml
.github/workflows/: release.yml  tdlib-release.yml
src/: main.rs
