[package]
name = "tgdyk"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Tiny local Telegram daemon for raw live TDLib updates"
license = "MIT"
repository = "https://github.com/pavel-voronin/tgdyk"
homepage = "https://github.com/pavel-voronin/tgdyk"
include = ["src/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
directories = "6.0.0"
libloading = "0.9.0"
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "signal", "io-util", "sync", "time", "io-std"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
